# qt-box-editor

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CURRENT_VERSION  INSTALL  LICENSE  README  README.md  index.html  params.json  qt-box-editor.pro
dialogs/: DrawRectangle.cpp  DrawRectangle.h  DrawRectangle.ui  FindDialog.cpp  FindDialog.h  FindDialog.ui  GetRowIDDialog.cpp  GetRowIDDialog.h  GetRowIDDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  ShortCutDialog.ui  ShortCutsDialog.cpp  ShortCutsDialog.h
resources/: QBE-Faenza.qrc  QBE-GNOME.qrc  QBE-Oxygen.qrc  QBE-Tango.qrc  application.qrc  faenza.qrc  gnome.qrc  tango.qrc  win.rc
resources/icons/QBE-Faenza/: index.theme
resources/icons/QBE-GNOME/: index.theme
resources/icons/QBE-Oxygen/: index.theme
resources/icons/QBE-Tango/: index.theme
resources/icons/faenza/: README
resources/icons/gnome/: README
resources/icons/misc/: README
resources/icons/qbe/: README
resources/icons/tango/: README
src/: ChildWidget.cpp  ChildWidget.h  DelegateEditors.cpp  DelegateEditors.h  MainWindow.cpp  MainWindow.h  Settings.h  SettingsDialog.cpp  SettingsDialog.ui  TessTools.cpp  TessTools.h  main.cpp
src/include/: ChildWidget.h  DelegateEditors.h  MainWindow.h  Settings.h  SettingsDialog.h  TessTools.h  settings.h
tests/: 8.box  8.tif  DESCRIPTIONS  eng.ligatures.exp01.box  eng.ligatures.exp01.tif  eng.ligatures.exp01.txt  hiero.sethe.1.box  kan01.box  multipages.box  multipages.tif  pangrams-stam.box  slk.example.001.box
win32/: qt.conf
